Adds subreddit saving

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.3'
     annotationProcessor 'androidx.room:room-compiler:2.2.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.core:core:1.2.0'
 
 }
