--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,6 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.2.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.core:core:1.2.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
 }
