Shows loading circle only if you scroll down to the end of the recycler view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".PostActivity"></activity>
         <activity
             android:name=".RecActivity"
             android:label="Recommendations"
