--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity
             android:name=".activities.FavImageActivity"
             android:label="Favorite Images"
+            android:theme="@style/AppTheme.NoActionBar"
             android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.SettingsActivity"
