--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
             android:label="Settings"
             android:parentActivityName=".activities.MainActivity"
             android:windowSoftInputMode="stateHidden" />
+
         <activity
             android:name=".activities.WallActivity"
             android:configChanges="orientation|keyboardHidden"
@@ -57,6 +58,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:label="Reddit Walls"
+            android:configChanges="orientation|keyboardHidden"
             android:theme="@style/AppTheme.ActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
